# commonware

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  RELEASE_NOTES.md  cooldown.toml  justfile
.github/: benchmark-tracking.toml  pull.yml
.github/actions/setup/: action.yml
.github/scripts/: check_dependency_cooldown.sh  hash_partition.py
.github/workflows/: benchmark.yml  coverage.yml  fast.yml  loom.yml  performance.yml  publish.yml  slow.yml  stale.yml  subvert-commonware.yml  subvert-extract.yml  subvert-sync.yml
actor/src/: mailbox.rs
actor/src/benches/: mailbox.rs
bench/: Cargo.toml  README.md
bench/src/: lib.rs
broadcast/fuzz/fuzz_targets/: broadcast_engine_operations.rs
broadcast/src/buffered/: engine.rs  ingress.rs  metrics.rs  mocks.rs  mod.rs
codec/: Cargo.toml
codec/fuzz/fuzz_targets/: codec_roundtrip.rs
codec/macros/src/: lib.rs
codec/src/: codec.rs  config.rs  conformance.rs  lib.rs  util.rs  varint.rs
codec/src/types/: btree_map.rs  btree_set.rs  bytes.rs  hash_map.rs  hash_set.rs  mod.rs  net.rs  primitives.rs  vec.rs
coding/: Cargo.toml  conformance.toml
coding/fuzz/: Cargo.toml
coding/fuzz/fuzz_targets/: zoda.rs
coding/src/: lib.rs  reed_solomon.rs
coding/src/benches/: bench.rs  bench_phased.rs  bench_phased_size.rs  bench_size.rs  reed_solomon.rs  shard_selection.rs  zoda.rs  zoda_phased.rs
coding/src/zoda/: mod.rs
collector/: Cargo.toml
collector/fuzz/fuzz_targets/: collector.rs
collector/src/p2p/: engine.rs  ingress.rs  mod.rs
conformance/: TESTING.md
conformance/macros/: Cargo.toml
conformance/macros/src/: lib.rs  naming.rs
consensus/: Cargo.toml  conformance.toml
consensus/fuzz/: Cargo.toml
consensus/fuzz/fuzz_targets/: attributable_map.rs  simplex_bls12381_multisig_minpk.rs  simplex_bls12381_multisig_minpk_twin.rs  simplex_bls12381_multisig_minsig.rs  simplex_bls12381_multisig_minsig_twin.rs  simplex_bls12381_threshold_minpk.rs  simplex_bls12381_threshold_minpk_twin.rs  simplex_bls12381_threshold_minsig.rs  simplex_bls12381_threshold_minsig_twin.rs  simplex_ed25519.rs  simplex_ed25519_twin.rs  simplex_elector.rs  simplex_messages.rs  simplex_secp256r1.rs  simplex_secp256r1_twin.rs
consensus/fuzz/src/: disrupter.rs  invariants.rs  lib.rs  simplex.rs  strategy.rs  utils.rs
consensus/src/: lib.rs  types.rs
consensus/src/aggregation/: config.rs  engine.rs  metrics.rs  mod.rs  safe_tip.rs  scheme.rs  types.rs
consensus/src/marshal/: ancestry.rs  config.rs  conformance.rs  mod.rs  store.rs
consensus/src/ordered_broadcast/: ack_manager.rs  config.rs  engine.rs  metrics.rs  mod.rs  scheme.rs  tip_manager.rs  types.rs
consensus/src/simplex/: config.rs  elector.rs  engine.rs  metrics.rs  mod.rs  types.rs
cryptography/: Cargo.toml  conformance.toml
cryptography/fuzz/: Cargo.toml
cryptography/fuzz/fuzz_targets/: blake3_hasher.rs  bloomfilter.rs  bls12381_batch_operations.rs  bls12381_dkg_golden.rs  bls12381_primitive_operations.rs  bls12381_threshold_operations.rs  bls12381_tle.rs  crc32_hasher.rs  ed25519_batch_verifier.rs  ed25519_decode.rs  metamorph_lthash.rs  secp256r1_recoverable_decode.rs  secp256r1_standard_decode.rs  sha256_hasher.rs
cryptography/src/: banderwagon.rs  certificate.rs  fuzz.rs  handshake.rs  lib.rs  secret.rs  transcript.rs
cryptography/src/blake3/: mod.rs
cryptography/src/bloomfilter/: mod.rs
cryptography/src/bls12381/: mod.rs  scheme.rs  tle.rs
cryptography/src/certificate/: mocks.rs
cryptography/src/crc32/: mod.rs
cryptography/src/ed25519/: mod.rs  scheme.rs
cryptography/src/handshake/: cipher.rs  conformance.rs  key_exchange.rs
cryptography/src/lthash/: mod.rs
cryptography/src/reed_solomon/: decoder_result.rs  encoder_result.rs  rate.rs  test_util.rs  wrappers.rs
cryptography/src/secp256r1/: common.rs  mod.rs  recoverable.rs  standard.rs
cryptography/src/sha256/: mod.rs
cryptography/src/zk/: circuit.rs  pedersen_to_plain.rs
deployer/src/aws/: attach.rs  authorize.rs  clean.rs  create.rs  destroy.rs  ec2.rs  images.rs  list.rs  mod.rs  profile.rs  (+4 more)
docker/: gungraun.dockerfile
docs/: index.html
docs/blogs/: pick-your-poisons.html  pick-your-poisons.magic-move.js  pick-your-poisons.md
examples/bridge/: Cargo.toml
examples/estimator/: Cargo.toml
examples/flood/: Cargo.toml
examples/log/: Cargo.toml
examples/reshare/: Cargo.toml  README.md
examples/sync/: Cargo.toml
formatting/src/: lib.rs
glue/: Cargo.toml  conformance.toml
invariants/: Cargo.toml
invariants/src/: minifuzz.rs
macros/tests/: select.rs
math/: Cargo.toml
math/benches/: interpolation.rs
math/src/: algebra.rs  ntt.rs  poly.rs  test.rs
mcp/src/: utils.test.ts
p2p/: TESTING.md
parallel/src/: lib.rs  policy.rs
resolver/: Cargo.toml
resolver/src/: delivery.rs  lib.rs  opaque.rs  subscribers.rs
runtime/: Cargo.toml  TESTING.md  conformance.toml
runtime/src/: conformance.rs  deterministic.rs  lib.rs  mocks.rs
scripts/: stability_helpers.sh
storage/: Cargo.toml  TESTING.md  conformance.toml
storage/fuzz/: Cargo.toml
storage/src/: lib.rs
stream/: Cargo.toml
stream/fuzz/: Cargo.toml
stream/src/: encrypted.rs
utils/: Cargo.toml  conformance.toml
utils/fuzz/: Cargo.toml
utils/fuzz/fuzz_targets/: cache.rs  historical_bitmap.rs  lib_functions.rs  time.rs
utils/src/: acknowledgement.rs  cache.rs  concurrency.rs  futures.rs  lib.rs  net.rs  rng.rs  time.rs  vec.rs
utils/src/bitmap/: atomic.rs  mod.rs  prunable.rs
utils/src/bitmap/benches/: count_ones.rs  roaring_contains.rs  roaring_difference.rs  roaring_insert.rs  roaring_insert_range.rs  roaring_intersection.rs  roaring_iteration.rs  roaring_memory.rs  roaring_union.rs  roaring_write.rs  write.rs
utils/src/bitmap/historical/: bitmap.rs  tests.rs
utils/src/bitmap/roaring/: fuzz.rs  mod.rs  ops.rs  prunable.rs
utils/src/bitmap/roaring/container/: array.rs  bitmap.rs  mod.rs  run.rs
utils/src/cache/benches/: bench.rs  get.rs  insert.rs  mixed.rs
utils/src/channel/: fallible.rs  reservation.rs  ring.rs
utils/src/rational/benches/: log2_ceil.rs
utils/src/sync/: mod.rs
(+647 files in other folders)
