[workspace]
members = [
    "actor",
    "bench",
    "broadcast",
    "codec",
    "codec/macros",
    "coding",
    "collector",
    "conformance",
    "conformance/macros",
    "consensus",
    "cryptography",
    "deployer",
    "formatting",
    "glue",
    "macros",
    "macros/impl",
    "math",
    "p2p",
    "parallel",
    "resolver",
    "runtime",
    "runtime/macros",
    "storage",
    "stream",
    "invariants",
    "utils",
    "examples/bridge",
    "examples/chat",
    "examples/estimator",
    "examples/flood",
    "examples/log",
    "examples/sync",
    "examples/reshare",

    # Fuzz builds
    "broadcast/fuzz",
    "codec/fuzz",
    "coding/fuzz",
    "collector/fuzz",
    "consensus/fuzz",
    "cryptography/fuzz",
    "math/fuzz",
    "p2p/fuzz",
    "runtime/fuzz",
    "stream/fuzz",
    "storage/fuzz",
    "utils/fuzz"
]
exclude = [
    ".github/dylints/borrowed_child_context",
    ".github/dylints/child_attribute_name_conflict",
    ".github/dylints/span_name_style",
    ".github/dylints/tracing_int_fields",
]
resolver = "2"

[workspace.metadata.dylint]
libraries = [{ path = ".github/dylints/*" }]

[workspace.package]
version = "2026.7.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://commonware.xyz"
rust-version = "1.95.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(full_bench)', 'cfg(huge_bench)', 'cfg(benchmark_tracking)', 'cfg(generate_conformance_tests)', 'cfg(commonware_stability_BETA)', 'cfg(commonware_stability_GAMMA)', 'cfg(commonware_stability_DELTA)', 'cfg(commonware_stability_EPSILON)', 'cfg(commonware_stability_RESERVED)'] }
unused-must-use = "deny"
rust-2018-idioms = "deny"
warnings = "deny"

[workspace.lints.clippy]
missing-const-for-fn = "warn"
use-self = "warn"
redundant-clone = "warn"
option-if-let-else = "warn"
disallowed_types = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
undocumented_unsafe_blocks = "deny"
unused-async = "warn"
large_futures = "warn"
# This generates false positives for methods that are correct, and the contortions
# to avoid triggering this method make the code worse.
suspicious_op_assign_impl = "allow"

[workspace.dependencies]
ahash = { version = "0.8.12", default-features = false }
anyhow = { version = "1.0.103", default-features = false }
arbitrary = "1.4.2"
aws-config = "1.9.0"
aws-lc-rs = "1.17.1"
aws-sdk-ec2 = { version = "1.240.0", default-features = false, features = [
	"default-https-client",
	"rt-tokio",
] }
aws-sdk-s3 = { version = "1.138.0", default-features = false, features = [
	"default-https-client",
	"http-1x",
	"rt-tokio",
	"sigv4a",
] }
axum = "0.8.9"
blake3 = { version = "1.8.5", default-features = false }
blst = { version = "0.3.16", default-features = false }
bytes = { version = "1.12.1", default-features = false }
cfg-if = "1.0.4"
chacha20poly1305 = { version = "0.11.0", default-features = false }
chrono = "0.4.45"
clap = "4.6.1"
colored = "3.1.1"
commonware-actor = { version = "2026.7.0", path = "actor" }
commonware-bench = { version = "2026.7.0", path = "bench" }
commonware-broadcast = { version = "2026.7.0", path = "broadcast" }
commonware-codec = { version = "2026.7.0", path = "codec", default-features = false }
commonware-codec-macros = { version = "2026.7.0", path = "codec/macros" }
commonware-coding = { version = "2026.7.0", path = "coding" }
commonware-collector = { version = "2026.7.0", path = "collector" }
commonware-conformance = { version = "2026.7.0", path = "conformance" }
commonware-conformance-macros = { version = "2026.7.0", path = "conformance/macros" }
commonware-consensus = { version = "2026.7.0", path = "consensus" }
commonware-cryptography = { version = "2026.7.0", path = "cryptography", default-features = false }
commonware-deployer = { version = "2026.7.0", path = "deployer", default-features = false }
commonware-formatting = { version = "2026.7.0", path = "formatting", default-features = false }
commonware-glue = { version = "2026.7.0", path = "glue" }
commonware-invariants = { version = "2026.7.0", path = "invariants" }
commonware-macros = { version = "2026.7.0", path = "macros", default-features = false }
commonware-macros-impl = { version = "2026.7.0", path = "macros/impl" }
commonware-math = { version = "2026.7.0", path = "math", default-features = false }
commonware-p2p = { version = "2026.7.0", path = "p2p" }
commonware-parallel = { version = "2026.7.0", path = "parallel", default-features = false }
commonware-resolver = { version = "2026.7.0", path = "resolver" }
commonware-runtime = { version = "2026.7.0", path = "runtime" }
commonware-runtime-macros = { version = "2026.7.0", path = "runtime/macros" }
commonware-storage = { version = "2026.7.0", path = "storage", default-features = false }
commonware-stream = { version = "2026.7.0", path = "stream" }
commonware-utils = { version = "2026.7.0", path = "utils", default-features = false }
console-subscriber = "0.5.0"
const-hex = { version = "1.19.1", default-features = false }
cpufeatures = "0.3.0"
crc = "3.4.0"
crc-fast = { version = "1.10.0", default-features = false }
criterion = "0.8.2"
crossbeam-queue = "0.3.13"
crossbeam-utils = "0.8.22"
crossterm = "0.29.0"
ctutils = "0.4.2"
curve25519-dalek = { version = "5.0.0", features = ["digest"] }
dashmap = "6.2.1"
ecdsa = { version = "0.17.0", default-features = false }
ed25519-consensus = "2.1.0"
either = "1.16.0"
fixedbitset = { version = "0.5.7", default-features = false }
futures = "0.3.32"
futures-timer = "3.0.4"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
glob = "0.3.3"
governor = "0.10.4"
gungraun = "0.19.4"
hashbrown = { version = "0.17.1", default-features = false, features = ["default-hasher"] }
io-uring = "0.7.13"
libc = "0.2.186"
libfuzzer-sys = "0.4.13"
loom = "0.7.2"
num-bigint = { version = "0.4.8", default-features = false }
num-integer = "0.1.46"
num-rational = { version = "0.4.2", features = ["num-bigint"] }
num-traits = { version = "0.2.19", default-features = false }
once_cell = { version = "1.21.4", default-features = false }
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = "0.32.1"
p256 = { version = "0.14.0", default-features = false }
parking_lot = "0.12.5"
paste = "1.0.15"
pin-project = "1.1.13"
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0"
prometheus-client = "0.25.0"
proptest = "1.11.0"
prost = "0.14.4"
prost-build = "0.14.4"
quote = "1.0"
rand = { version = "0.10.2", default-features = false }
rand_chacha = { version = "0.10.0", default-features = false }
rand_core = { version = "0.10.1", default-features = false }
rand_distr = "0.6.0"
ratatui = "0.30.2"
rayon = { version = "1.12.0", default-features = false }
reqwest = "0.13.4"
rstest = "0.26.1"
serde = "1.0.228"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = { version = "0.11.0", default-features = false }
shlex = "2.0.1"
syn = "2.0.119"
sysinfo = "0.39.6"
thiserror = { version = "2.0.18", default-features = false }
tokio = "1.52.3"
toml = "1.1.3"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = "0.3.23"
uuid = "1.23.5"
x25519-dalek = "3.0.0"
zeroize = "1.9.0"
zstd = "0.13.3"

[profile.bench]
# Because we enable overflow checks in "release", we should benchmark with them.
overflow-checks = true
# Gungraun requires debug symbols for bench targets.
debug = true

[profile.dev]
# Although overflow checks are enabled by default in "dev", we explicitly
# enable them here for clarity.
overflow-checks = true
# Keep line tables for file:line in panics and backtraces, but skip variable-level
# debuginfo to speed up codegen and linking. Use `debug = 2` for debugger sessions.
debug = "line-tables-only"

[profile.release]
# To guard against unexpected behavior in production, we enable overflow checks in
# "release" although they incur some performance penalty.
overflow-checks = true

[profile.release-with-debug]
inherits = "release"
# Setting debug to true instructs cargo to include debug symbols in the release
# binary (not to disable optimizations).
debug = true

[profile.test]
# Although overflow checks are enabled by default in "test", we explicitly
# enable them here for clarity.
overflow-checks = true
# Keep line tables for file:line in panics and backtraces, but skip variable-level
# debuginfo to speed up codegen and linking. Use `debug = 2` for debugger sessions.
debug = "line-tables-only"

[profile.test.package.curve25519-dalek]
opt-level = 3

[profile.test.package.aws-lc-rs]
opt-level = 3

[profile.test.package.aws-lc-sys]
opt-level = 3

[profile.test.package.blake3]
opt-level = 3

[profile.test.package.blst]
opt-level = 3

[profile.test.package.chacha20poly1305]
opt-level = 3

[profile.test.package.crc]
opt-level = 3

[profile.test.package.crc-fast]
opt-level = 3

[profile.test.package.ctutils]
opt-level = 3

[profile.test.package.crypto-bigint]
opt-level = 3

[profile.test.package.ecdsa]
opt-level = 3

[profile.test.package.elliptic-curve]
opt-level = 3

[profile.test.package.num-bigint]
opt-level = 3

[profile.test.package.num-integer]
opt-level = 3

[profile.test.package.num-rational]
opt-level = 3

[profile.test.package.num-traits]
opt-level = 3

[profile.test.package.p256]
opt-level = 3

[profile.test.package.primeorder]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[profile.test.package.sha2]
opt-level = 3

[profile.test.package.x25519-dalek]
opt-level = 3
